--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Strukturyzator Wody</string>
+     <string name="default_notification_channel_id">raccoonsoftware</string>
+     <string name="channel">channel</string>
 </resources>
